--- a/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
+++ b/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "eicons";
-  src: url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_41_0");
-  src: url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_41_0#iefix") format("embedded-opentype"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_41_0") format("woff2"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_41_0") format("woff"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_41_0") format("truetype"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_41_0#eicon") format("svg");
+  src: url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_41_0");
+  src: url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_41_0#iefix") format("embedded-opentype"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_41_0") format("woff2"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_41_0") format("woff"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_41_0") format("truetype"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_41_0#eicon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
