--- a/wp-content/plugins/elementor/assets/lib/font-awesome/css/regular.css
+++ b/wp-content/plugins/elementor/assets/lib/font-awesome/css/regular.css
@@ -7,8 +7,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot");
-  src: url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot#iefix") format("embedded-opentype"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff2") format("woff2"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff") format("woff"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.ttf") format("truetype"), url("https://leverb-anonymous.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
+  src: url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot");
+  src: url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.eot#iefix") format("embedded-opentype"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff2") format("woff2"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.woff") format("woff"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.ttf") format("truetype"), url("https://anonymous-leverb.github.io/leverb/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
 
 .far {
   font-family: 'Font Awesome 5 Free';
